# Red

./: .gitignore  Cargo.toml  CommandHandler.cs  Database.cs  Dockerfile  ExampleEnum.cs  InteractionHandler.cs  InteractionModule.cs  LICENSE  LogToFile.cs  PrefixHandler.cs  PrefixModule.cs  Program.cs  README.md  Red.csproj  Red.sln  RequireOwnerAttribute.cs  config.toml  settings.json
.github/workflows/: EvilTest.yml  bot-linux.yml  dotnet.yml  linux.yml
Command/: Ping.cs
Database/: Database.cs  DefineSettings.cs  DeleteDB.cs  PopulateDB.cs
Modules/: UtilityModule.cs
Properties/: launchSettings.json
Services/: CommandHandler.cs  LoggingHandler.cs
SlashCommand/: SlashPing.cs
src/: config.rs  lib.rs  main.rs
src/bot/commands/: command_registration.rs  commands_list.rs  mod.rs  music.rs  ping.rs
src/bot/events/: handlers.rs
src/bot/utils/: application_id.rs  config.rs  logger.rs  logrotate.rs  mod.rs
src/bot/utils/log/: logger.rs  logrotate.rs  mod.rs
tests/: test-config.rs
