[package]
name = "red"
version = "0.1.0-alpha.3"
edition = "2024"
description = "A robust and versatile Discord bot developed using the Serenity library."
license = "GPL-3.0-only WITH Commons-Clause-1.0"
readme = "README.md"
repository = "https://github.com/Plarpoon/Red"
publish = false

[dependencies]
# Discord API
serenity = { version = "0.12.4", features = ["full"] }

# Async runtime
tokio = { version = "1.43.0", features = ["full"] }

# Data handling and serialization
serde = "1.0.218"
toml = "0.8.20"

# Database
surrealdb = "2.2.1"

# Date and time
chrono = "0.4.40"

# Logging and tracing
fern = "0.7.1"
log = "0.4.26"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

# Utilities
colored = "3.0.0"
