[package]
name = "red"
version = "0.1.0-alpha.4"
edition = "2024"
description = "A robust and versatile Discord bot developed using the poise/serenity library."
license = "GPL-3.0-only WITH Commons-Clause-1.0"
readme = "README.md"
repository = "https://github.com/Plarpoon/Red"
publish = false

[dependencies]
# Discord API
poise = "0.6.1"
songbird = "0.5.0"

# Async runtime
tokio = { version = "1.44.0", features = ["full"] }

# Data handling and serialization
serde = "1.0.219"
toml = "0.8.20"

# Database
#surrealdb = "2.2.1"

# Date and time
chrono = "0.4.40"

# Logging and tracing
fern = "0.7.1"
log = "0.4.26"

# Utilities
colored = "3.0.0"
reqwest = "0.12.13"
